namespace CrcChecker.Common
{
    public enum PerformanceMarker
    {
        FileRead,
        ComputeChecksum,
        CheckFiles
    }
}
