@startuml

namespace CrcChecker.Common {
  enum PerformanceMarker {
    FileRead
	ComputeChecksum
	CheckFiles
  }

  interface IPerformanceTracer {
    Begin(PerformanceMarker performanceMarker, string param0 = null)
	End(PerformanceMarker performanceMarker, string param0 = null)
  }

  class NoTracingPerformanceTracer {
    +Begin(PerformanceMarker performanceMarker, string param0 = null)
	+End(PerformanceMarker performanceMarker, string param0 = null)
  }
  
  class ConsolePerformanceTracer {
    +Begin(PerformanceMarker performanceMarker, string param0 = null)
	+End(PerformanceMarker performanceMarker, string param0 = null)
  }
  
  class Log4NetPerformanceTracer {
    +Begin(PerformanceMarker performanceMarker, string param0 = null)
	+End(PerformanceMarker performanceMarker, string param0 = null)
  }
  
  IPerformanceTracer <|-- NoTracingPerformanceTracer  
  IPerformanceTracer <|-- ConsolePerformanceTracer
  IPerformanceTracer <|-- Log4NetPerformanceTracer
  
  interface ICrcCalculator {
    CheckFiles(IEnumerable<string> filesToCheck, IPerformanceTracer perfTrace)
  }
  
  ICrcCalculator --> IPerformanceTracer
}

namespace CrcChecker {
  class ChunkedFileReader {
    {static} +ReadFile(string filename, IPerformanceTracer perfTrace): byte[]
  }
  
  ChunkedFileReader --> CrcChecker.Common.PerformanceMarker
  ChunkedFileReader --> CrcChecker.Common.IPerformanceTracer
  
  class Crc32 {
    +Crc32(IPerformanceTracer perfTrace)
	--
    +ComputeChecksum(byte[] bytes, string filename = null): uint
	+ComputeChecksumBytes(byte[] bytes): byte[]
  }
  
  Crc32 --> CrcChecker.Common.PerformanceMarker
  Crc32 --> CrcChecker.Common.IPerformanceTracer
  
  class PrimitiveCrcCalculator {
    +CheckFiles(IEnumerable<string> filesToCheck, IPerformanceTracer perfTrace)
  }
  
  PrimitiveCrcCalculator --> CrcChecker.Common.PerformanceMarker
  PrimitiveCrcCalculator --> CrcChecker.Common.IPerformanceTracer
  PrimitiveCrcCalculator o-- ChunkedFileReader
  PrimitiveCrcCalculator o-- Crc32
  
  CrcChecker.Common.ICrcCalculator <|-- PrimitiveCrcCalculator
  
  class Program {
    {static} ~Main(string[] args)
	{static} -PrintDirectorySummary(string rootDirectory)
	{static} -PrintUsage()
	{static} -CreateFlatListOfFilesToCheck(string rootDirectory): IEnumerable<string>
  }
  
  Program --> CrcChecker.Common.IPerformanceTracer
  Program o-- PrimitiveCrcCalculator
  Program o-- CrcChecker.Common.NoTracingPerformanceTracer
  Program o-- CrcChecker.Common.Log4NetPerformanceTracer
}

hide empty members
hide empty fields
hide empty methods

@enduml